# marketplace-procrastination

./: .env.example  .gitignore  Makefile  README.md  REPOSITORY_GUIDE.md  docker-compose.yml  pyproject.toml
services/b2b/: .env.example  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  pytest.ini
services/b2b/api/: auth.py  categories.py  fulfill.py  images.py  inventory.py  invoice.py  moderation_events.py  products.py  public_catalog.py  sku.py
services/b2b/core/: config.py  messaging.py  s3.py  security.py
services/b2b/crud/: category.py  fulfill.py  images.py  inventory.py  invoice.py  moderation_event.py  outbox.py  product.py  public_product.py  seller.py  session.py  sku.py
services/b2b/database/: core.py
services/b2b/docs/: US-B2B-01.md  US-B2B-02.md  US-B2B-03.md  US-B2B-04.md  US-B2B-05.md  US-B2B-06.md  US-B2B-07.md  US-B2B-08.md  US-B2B-09.md  US-B2B-10.md  US-B2B-11.md  US-B2B-12.md
services/b2b/exceptions/: base.py  category.py  invoice.py  product.py  s3.py  seller.py  session.py  sku.py
services/b2b/middlewares/: service_key_verification.py  token_verification.py
services/b2b/schemas/: auth.py  fulfill.py  images.py  inventory.py  invoice.py  moderation_event.py  product.py  public_catalog.py  sku.py
services/b2b/services/: auth_service.py  category_service.py  fulfill_service.py  images_service.py  inventory_service.py  invoice.py  moderation_event_service.py  outbox_worker.py  product_service.py  public_catalog_service.py  sku_service.py
services/b2b/tests/: conftest.py  test_contract_routes.py  test_inventory_contract.py  test_invoice_contract.py  test_messaging.py
services/b2c/: .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
services/b2c/api/: auth.py  breadcrumbs.py  cart.py  catalog.py  favorite.py  orders.py  product.py  subscriptions.py  user.py
services/b2c/core/: config.py  db.py  security.py
services/b2c/crud/: address.py  banner.py  (+11 more)
(+174 files in other folders)
