[project]
name = "b2c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "alembic",
    "pydantic-settings",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "asyncpg",
    "pydantic[email]>=2.12.5",
    "openpyxl>=3.1.5",
    "deep-translator>=1.11.4",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
]

[tool.ruff]
lint.extend-select = [
    "FAST",
    "ANN",
    "S",
    "BLE",
    "B",
    "C4",
    "FIX",
    "LOG",
    "Q",
    "ARG",
    "PTH",
    "N",
]

[tool.ruff.format]
quote-style =  "double"
indent-style = "tab"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S607"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "httpx~=0.28",
    "testcontainers~=4.14",
    "factory-boy>=3.3.0",
]
